--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
+    
     <title>archernar</title>
 </head>
 <body>
@@ -11,7 +14,7 @@
         <div class="nav">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/gallery.html">Gallery</a></li>
+                <li><a href="#Gallery">Gallery</a></li>
                 <li><a href="/las.html">Last</a></li>
             </ul>
         </div>
@@ -26,14 +29,48 @@
     <div class="aside"></div>
     <div class="widget">
         <h3 class="heading">
-            <a href="/gallery.html" class="heading">
+            <a href="#Gallery" class="heading">
                 Explore More
             </a> 
         </h3>
     </div>
 
+<div id="Gallery" data-aos="fade-up"
+data-aos-anchor-placement="top-bottom">
+    <div class="heading-2">
+        <h3 class="title" style="font-family: 'Zen Kurenaido', sans-serif;color: #4F616D;">
+            写真
+        </h3>
+    </div>
+    <div class="gallery2">
+        <div class="kolase" data-aos="fade-up"
+        data-aos-anchor-placement="top-bottom">
+            <div class="grid">
+                <img src="/Telegram Desktop/img1.jpg">
+            </div>
+            <div class="grid">
+                <img src="/Telegram Desktop/img2.jpg">
+            </div>
+            <div class="grid">
+                <img src="/Telegram Desktop/img3.jpg">
+            </div>
+            <div class="grid">
+                <img src="/Telegram Desktop/img4.jpg">
+            </div>
+            <div class="grid">
+                <img src="/Telegram Desktop/img5.jpg">
+            </div>
+            <div class="grid">
+                <img src="/Telegram Desktop/img6.jpg">
+            </div>
+        </div>
+</div>
     <div class="footer">
         <p></p>
     </div>
+
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
