--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@ data-aos-anchor-placement="top-bottom">
         </h3>
     </div>
     <div class="gallery2">
-        <div class="kolase" data-aos="fade-up"
-        data-aos-anchor-placement="top-bottom">
+        <div class="kolase">
             <div class="grid">
-                <img src="/Telegram Desktop/img1.jpg">
+                <img src="/Telegram Desktop/img1.jpg" data-aos="fade-up"
+                data-aos-duration="10000">
             </div>
             <div class="grid">
-                <img src="/Telegram Desktop/img2.jpg">
+                <img src="/Telegram Desktop/img2.jpg" data-aos="fade-up"
+                data-aos-duration="10000">
             </div>
             <div class="grid">
-                <img src="/Telegram Desktop/img3.jpg">
+                <img src="/Telegram Desktop/img3.jpg" data-aos="fade-up"
+                data-aos-duration="4500">
             </div>
             <div class="grid">
                 <img src="/Telegram Desktop/img4.jpg">
