--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
-    
+
     <title>archernar</title>
 </head>
+
 <body>
     <div class="header">
         <div class="nav">
@@ -20,59 +22,58 @@
         </div>
     </div>
 
-    <section class="main-content">
-        <div class="article">
-          <h2>Hello My Moon...</h2>
-        </article>
-    </section>
+    <div class="#home">
+        <section class="main-content">
+            <div class="article">
+                <h2>Hello My Moon...</h2>
+                </article>
+        </section>
+    </div>
 
     <div class="aside"></div>
     <div class="widget">
         <h3 class="heading">
             <a href="#Gallery" class="heading">
                 Explore More
-            </a> 
+            </a>
         </h3>
     </div>
 
-<div id="Gallery" data-aos="fade-up"
-data-aos-anchor-placement="top-bottom">
-    <div class="heading-2">
-        <h3 class="title" style="font-family: 'Zen Kurenaido', sans-serif;color: #4F616D;">
-            写真
-        </h3>
-    </div>
-    <div class="gallery2">
-        <div class="kolase">
-            <div class="grid">
-                <img src="/Telegram Desktop/img1.jpg" data-aos="fade-up"
-                data-aos-duration="10000">
-            </div>
-            <div class="grid">
-                <img src="/Telegram Desktop/img2.jpg" data-aos="fade-up"
-                data-aos-duration="10000">
-            </div>
-            <div class="grid">
-                <img src="/Telegram Desktop/img3.jpg" data-aos="fade-up"
-                data-aos-duration="4500">
-            </div>
-            <div class="grid">
-                <img src="/Telegram Desktop/img4.jpg">
-            </div>
-            <div class="grid">
-                <img src="/Telegram Desktop/img5.jpg">
-            </div>
-            <div class="grid">
-                <img src="/Telegram Desktop/img6.jpg">
+    <div id="Gallery" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="heading-2">
+            <h3 class="title" style="font-family: 'Zen Kurenaido', sans-serif;color: #4F616D;">
+                写真
+            </h3>
+        </div>
+        <div class="gallery2">
+            <div class="kolase">
+                <div class="grid">
+                    <img src="/img1.jpg" data-aos="fade-up" data-aos-duration="10000">
+                </div>
+                <div class="grid">
+                    <img src="/img2.jpg" data-aos="fade-up" data-aos-duration="10000">
+                </div>
+                <div class="grid">
+                    <img src="/img3.jpg" data-aos="fade-up" data-aos-duration="4500">
+                </div>
+                <div class="grid">
+                    <img src="/img4.jpg">
+                </div>
+                <div class="grid">
+                    <img src="img5.jpg">
+                </div>
+                <div class="grid">
+                    <img src="/img6.jpg">
+                </div>
             </div>
         </div>
-</div>
-    <div class="footer">
-        <p></p>
-    </div>
+        <div class="footer">
+            <p></p>
+        </div>
 
-    <script>
-        AOS.init();
-      </script>
+        <script>
+            AOS.init();
+        </script>
 </body>
+
 </html>
