--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="aside"><div class="border w-full h-40 flex items-center justify-center">
-        <a href="#_" class="relative px-6 py-3 font-bold text-black group">
+        <a href="#Gallery" class="relative px-6 py-3 font-bold text-black group">
           <span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-red-300 group-hover:translate-x-0 group-hover:translate-y-0"></span>
           <span class="absolute inset-0 w-full h-full border-4 border-black"></span>
           <span class="relative">Explore</span>
