--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
     </div>
 
     <div class="#home">
-        <section class="main-content">
+        <section class="main-content text-blur-out" data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0">
             <div class="article">
                 <h2>Hello My Moon...</h2>
                 </article>
         </section>
     </div>
 
-    <div class="aside"><div class="border w-full h-40 flex items-center justify-center">
+    <div class="aside"><div class="border w-full h-40 flex items-center justify-center" data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="1900"
+        data-aos-offset="0">
         <a href="#Gallery" class="relative px-6 py-3 font-bold text-black group">
           <span class="absolute inset-0 w-full h-full transition duration-300 ease-out transform -translate-x-2 -translate-y-2 bg-red-300 group-hover:translate-x-0 group-hover:translate-y-0"></span>
           <span class="absolute inset-0 w-full h-full border-4 border-black"></span>
