--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
         <div class="gallery2">
             <div class="kolase">
                 <div class="grid">
-                    <img src="/img1.jpg" data-aos="fade-up" data-aos-duration="10000">
+                    <img src="img1.jpg" data-aos="fade-up" data-aos-duration="10000">
                 </div>
                 <div class="grid">
-                    <img src="/img2.jpg" data-aos="fade-up" data-aos-duration="10000">
+                    <img src="img2.jpg" data-aos="fade-up" data-aos-duration="10000">
                 </div>
                 <div class="grid">
-                    <img src="/img3.jpg" data-aos="fade-up" data-aos-duration="4500">
+                    <img src="img3.jpg" data-aos="fade-up" data-aos-duration="4500">
                 </div>
                 <div class="grid">
-                    <img src="/img4.jpg">
+                    <img src="img4.jpg">
                 </div>
                 <div class="grid">
                     <img src="img5.jpg">
                 </div>
                 <div class="grid">
-                    <img src="/img6.jpg">
+                    <img src="img6.jpg">
                 </div>
             </div>
         </div>
