--- a/index.html
+++ b/index.html
@@ -50,31 +50,32 @@
         </h3>
     </div>
 
-    <div id="Gallery" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+    <div id="Gallery" data-aos="fade-up" data-aos-duration="10000" data-aos-delay="300">
         <div class="heading-2">
             <h3 class="title" style="font-family: 'Zen Kurenaido', sans-serif;color: #4F616D;">
                 写真
             </h3>
         </div>
         <div class="gallery2">
+            <div class="line"></div>
             <div class="kolase">
                 <div class="grid">
-                    <img src="img1.jpg" data-aos="fade-up" data-aos-duration="10000">
+                    <img src="img1.jpg" data-aos="fade-up" data-aos-duration="10000" data-aos-delay="300">
                 </div>
                 <div class="grid">
-                    <img src="img2.jpg" data-aos="fade-up" data-aos-duration="10000">
+                    <img src="img2.jpg" data-aos="fade-up" data-aos-duration="10000" data-aos-delay="300">
                 </div>
                 <div class="grid">
-                    <img src="img3.jpg" data-aos="fade-up" data-aos-duration="4500">
+                    <img src="img3.jpg" data-aos="fade-up" data-aos-duration="10000" data-aos-delay="300">
                 </div>
                 <div class="grid">
-                    <img src="img4.jpg">
+                    <img src="img4.jpg" data-aos="fade-up" data-aos-duration="20000" data-aos-delay="300">
                 </div>
                 <div class="grid">
-                    <img src="img5.jpg">
+                    <img src="img5.jpg" data-aos="fade-up" data-aos-duration="20000" data-aos-delay="300">
                 </div>
                 <div class="grid">
-                    <img src="img6.jpg">
+                    <img src="img6.jpg" data-aos="fade-up" data-aos-duration="20000" data-aos-delay="300">
                 </div>
             </div>
         </div>
